--- a/app/globals.css
+++ b/app/globals.css
@@ -17,13 +17,17 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+
 }
 
 @layer utilities {
